devops/04 - helm/docker-compose/templates/flaskapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: flaskapp
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flaskapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/db_nw: "true"
        io.kompose.network/web_nw: "true"
        io.kompose.service: flaskapp
    spec:
      containers:
        - env:
            - name: APP_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: APP_SECRET_KEY
                  name: env_dev
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env_dev
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env_dev
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env_dev
          image: nufusrufus/flaskapp
          name: flaskapp
          resources: {}
      restartPolicy: Always
status: {}
