devops/04 - helm/docker-compose/templates/db_nw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: db_nw
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/db_nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/db_nw: "true"
